@@ -1,5 +1,6 @@
 Release ()
 ------------------------------------
+* 修正了Table的editorFunction的一个BUG
 
 Release (2011-04-25)
 ------------------------------------
